fix z-index create task button

--- a/src/components/Tasks/TaskHeader/TaskHeader.module.scss
+++ b/src/components/Tasks/TaskHeader/TaskHeader.module.scss
@@ -90,7 +90,7 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    z-index: 20;
+    z-index: 25;
   }
 }
 .task_name {
